--- a/style.css
+++ b/style.css
@@ -14,8 +14,29 @@
 }
 .container{
 	width: 40%;
-	height: 400px;
+	/* height: 400px; */
+	padding: 15px;
 	background-color: white;
 	border-radius: 8px;
 	box-shadow: 0px 0px 10px gray;
+}
+h2{
+	font-size: 1rem;
+	/* display: flex;
+	align-items: center;
+	justify-content: center; */
+}
+.row{
+	width: 100%;
+	margin: 20px;
+	/* margin-left: 0; */
+}
+.btn{
+	width: 100%;
+	padding: 5px;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	font-size: 0.5rem;
+	background-color: #3498db;
 }
