--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 	justify-content: center;
 	flex-direction: column;
 }
-.container{
+#container{
 	width: 40%;
 	/* height: 400px; */
 	padding: 15px;
@@ -39,4 +39,5 @@ h2{
 	border-radius: 5px;
 	font-size: 0.5rem;
 	background-color: #3498db;
+	cursor: pointer;
 }
