--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .main{
 	width: 100%;
 	height: 100vh;
-	background-color: antiquewhite;
+	background-color: #3498db;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -22,14 +22,14 @@
 }
 h2{
 	font-size: 1rem;
-	/* display: flex;
+	display: flex;
 	align-items: center;
-	justify-content: center; */
+	justify-content: center;
 }
 .row{
 	width: 100%;
 	margin: 20px;
-	/* margin-left: 0; */
+	margin-left: 0;
 }
 .btn{
 	width: 100%;
