--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 	background-color: white;
 	border-radius: 8px;
 	box-shadow: 0px 0px 10px gray;
+	/* cursor: pointer; */
 }
 h2{
 	font-size: 1rem;
